2008-06-19  Janne Jalkanen <jalkanen@apache.org>

        * 2.7.0-svn-51
        
        * JSPWIKI-231: Updated de i18n.
        
2008-06-25 Dirk Frederickx <dirk.frederickx@gmail.com>

        * 2.7.0-svn-50

        * [JSPWIKI-295] Sub tabs on the Admin.jsp didn't work because the
        corresponding tag ID's were containing dot's.
        
2008-06-22 Dirk Frederickx <dirk.frederickx@gmail.com>

        * 2.7.0-svn-49

        * [JSPWIKI-141] I18 properties also fixed in EditGroupContent.jsp
        
        * Included latest favicon.ico of Florian and Harry

2008-06-19  Janne Jalkanen <jalkanen@apache.org>

        * 2.7.0-svn-48
        
        * WikiWizard removed due to it being LGPL.  The following files
        were removed
           * webdocs/applets/wikiwizard.jar
           * webdocs/applets/WiWi-INF/
           * webdocs/scripts/jspwiki-wikiwizard.js
           * src/com/ecyrd/jspwiki/ui/admin/beans/WikiWizardAdminBean  
           
        * [JSPWIKI-231]: Updated de, zh_CN and nl.  Thanks to Florian
        Holeczek, Harry Metske and David Gao!
        
2008-06-19 Dirk Frederickx <dirk.frederickx@gmail.com>

        * No version bump

        * [JSPWIKI-295] Fixed Tabs in Admin.jsp

2008-06-19  Janne Jalkanen <jalkanen@apache.org>

        * 2.7.0-svn-47
        
        * Added support for the Universal Edit Button - 
        universaleditbutton.org.  About 3 mins before launch, even...

2008-06-17 Dirk Frederickx <dirk.frederickx@gmail.com>

        * 2.7.0-svn-46 

        * [JSPWIKI-293] added editor.plain.sneakpreview.title resource

        * [JSPWIKI-294] Faulty i18n in editor toolbar
        
        * [JSPWIKI-280] Scroll bar problem in IE7
        
2008-06-15  Janne Jalkanen <jalkanen@apache.org>

        * 2.7.0-svn-45
        
        * JSPWIKI-208: RSS images are now hidden if RSS is disabled.
        
        * Moved "info.rsspagefeed.title" key from default.properties
        to CoreResources and renamed to "rss.title".
