@@ -1,4 +1,9 @@
-#Sun Jun 22 16:08:18 EEST 2008
+#Sun Jun 29 18:40:26 EEST 2008
 eclipse.preferences.version=1
 encoding//etc/i18n/templates/default_de.properties=ISO-8859-1
+encoding//src/wikipages/fi/ApprovalRequiredForPageChanges.txt=UTF-8
+encoding//src/wikipages/fi/ApprovalRequiredForUserProfiles.txt=UTF-8
+encoding//src/wikipages/fi/EditFindAndReplaceHelp.txt=UTF-8
+encoding//src/wikipages/fi/MoreMenu.txt=UTF-8
+encoding//src/wikipages/fi/TitleBox.txt=UTF-8
 encoding/<project>=ISO-8859-1
