@@ -10,6 +10,7 @@ InstallationTips.txt
 LeftMenu.txt
 LeftMenuFooter.txt
 LoginHelp.txt
+LoginPageHelp.txt
 Main.txt
 MoreMenu.txt
 OneMinuteWiki.txt
