@@ -1,0 +1,7 @@
+[Muutokset|Recent Changes]\\
+[Kaikki sivut|Page Index]\\
+[Tietoa|About]\\
+[SystemInfo]\\
+
+[Käyttämättömät sivut|UnusedPages]\\
+[Puuttuvat sivut|UndefinedPages]\\
