@@ -1,0 +1,3 @@
+%%center
+[Tervetuloa|TitleBox] [JSPWikin pariin|About]
+/%
